@@ -212,7 +212,7 @@ public class Encoder
     return exceptionListener;
   }
 
-  public PersistenceDelegate getPersistenceDelegate(Class type)
+  public PersistenceDelegate getPersistenceDelegate(Class<?> type)
   {
     // This is not specified but the JDK behaves like this.
     if (type == null)
@@ -246,7 +246,8 @@ public class Encoder
    * access is thread safe.
    * </p>
    */
-  public void setPersistenceDelegate(Class type, PersistenceDelegate delegate)
+  public void setPersistenceDelegate(Class<?> type,
+                                     PersistenceDelegate delegate)
   {
     // If the argument is null this will cause a NullPointerException
     // which is expected behavior.
